--- a/charts/nextcloud/templates/configmap.yaml
+++ b/charts/nextcloud/templates/configmap.yaml
@@ -12,7 +12,12 @@ data:
       'dbhost' => '{{ .Values.externalDatabase.host }}:{{ .Values.externalDatabase.port }}',
       'dbuser' => '{{ .Values.externalDatabase.user }}',
       'dbpassword' => '{{ .Values.externalDatabase.password }}',
-      'overwrite.cli.url' => 'http://nextcloud-nextcloud.default.svc.cluster.local',
+      'overwrite.cli.url' => 'http://nextcloud-nextcloud.default.svc.cluster.local:8080',
+      'trusted_domains' => array (
+        0 => 'localhost',
+        1 => 'nextcloud-nextcloud.default.svc.cluster.local',
+        2 => 'nextcloud.velesoft.ru',
+      ),
       'installed' => false,
       'memcache.local' => '\\OC\\Memcache\\Redis',
       'memcache.locking' => '\\OC\\Memcache\\Redis',
@@ -27,39 +32,34 @@ data:
     #!/bin/sh
     # Custom entrypoint to bypass redis-session.ini creation
     echo "Starting Nextcloud with custom entrypoint..."
-    # Ensure data directory permissions
-    chown -R www-data:www-data {{ .Values.nextcloud.datadir }}
-    chmod -R 755 {{ .Values.nextcloud.datadir }}
+    # Ensure directory permissions
+    echo "Checking permissions for /var/www/html and {{ .Values.nextcloud.datadir }}..."
+    chown -R www-data:www-data /var/www/html {{ .Values.nextcloud.datadir }}
+    chmod -R 755 /var/www/html {{ .Values.nextcloud.datadir }}
+    ls -ld /var/www/html {{ .Values.nextcloud.datadir }}
+    # Debug: Check Apache port configuration
+    echo "Checking Apache port configuration..."
+    cat /etc/apache2/ports.conf
     # Debug: Check if occ exists
     if [ -f "/var/www/html/occ" ]; then
       echo "Found /var/www/html/occ"
+      OCC_COMMAND="/var/www/html/occ"
     else
-      echo "ERROR: /var/www/html/occ not found, trying index.php occ"
+      echo "ERROR: /var/www/html/occ not found, using index.php occ"
+      OCC_COMMAND="/var/www/html/index.php occ"
     fi
     # Run Nextcloud setup if not installed
     if [ ! -f "{{ .Values.nextcloud.datadir }}/config.php" ]; then
       echo "Running Nextcloud installation..."
-      if [ -f "/var/www/html/occ" ]; then
-        php /var/www/html/occ maintenance:install \
-          --database={{ .Values.externalDatabase.type }} \
-          --database-host={{ .Values.externalDatabase.host }}:{{ .Values.externalDatabase.port }} \
-          --database-name={{ .Values.externalDatabase.database }} \
-          --database-user={{ .Values.externalDatabase.user }} \
-          --database-pass={{ .Values.externalDatabase.password }} \
-          --admin-user={{ .Values.nextcloud.adminUser }} \
-          --admin-pass={{ .Values.nextcloud.adminPassword }} \
-          --data-dir={{ .Values.nextcloud.datadir }}
-      else
-        php /var/www/html/index.php occ maintenance:install \
-          --database={{ .Values.externalDatabase.type }} \
-          --database-host={{ .Values.externalDatabase.host }}:{{ .Values.externalDatabase.port }} \
-          --database-name={{ .Values.externalDatabase.database }} \
-          --database-user={{ .Values.externalDatabase.user }} \
-          --database-pass={{ .Values.externalDatabase.password }} \
-          --admin-user={{ .Values.nextcloud.adminUser }} \
-          --admin-pass={{ .Values.nextcloud.adminPassword }} \
-          --data-dir={{ .Values.nextcloud.datadir }}
-      fi
+      php $OCC_COMMAND maintenance:install \
+        --database={{ .Values.externalDatabase.type }} \
+        --database-host={{ .Values.externalDatabase.host }}:{{ .Values.externalDatabase.port }} \
+        --database-name={{ .Values.externalDatabase.database }} \
+        --database-user={{ .Values.externalDatabase.user }} \
+        --database-pass={{ .Values.externalDatabase.password }} \
+        --admin-user={{ .Values.nextcloud.adminUser }} \
+        --admin-pass={{ .Values.nextcloud.adminPassword }} \
+        --data-dir={{ .Values.nextcloud.datadir }}
     fi
     # Start Apache
     echo "Starting Apache on port 8080..."
