--- a/charts/nextcloud/templates/configmap.yaml
+++ b/charts/nextcloud/templates/configmap.yaml
@@ -33,30 +33,31 @@ data:
     #!/bin/sh
     # Custom entrypoint to bypass redis-session.ini creation
     echo "Starting Nextcloud with custom entrypoint..."
-    # Ensure data directory permissions (skip /var/www/html/config as it's read-only)
+    # Ensure data directory permissions
     echo "Checking permissions for {{ .Values.nextcloud.datadir }}..."
     chown -R www-data:www-data {{ .Values.nextcloud.datadir }}
     chmod -R 755 {{ .Values.nextcloud.datadir }}
-    ls -ld /var/www/html {{ .Values.nextcloud.datadir }}
+    ls -ld {{ .Values.nextcloud.datadir }}
     # Debug: Check Nextcloud files
-    echo "Checking Nextcloud files..."
-    ls -l /var/www/html/index.php /var/www/html/occ 2>/dev/null || echo "ERROR: index.php or occ not found"
-    # Debug: Check Apache port configuration
-    echo "Checking Apache port configuration..."
-    cat /etc/apache2/ports.conf
-    # Check if occ exists
+    echo "Checking Nextcloud files in /var/www/html..."
+    ls -l /var/www/html || echo "ERROR: Cannot list /var/www/html"
+    if [ -f "/var/www/html/index.php" ]; then
+      echo "Found /var/www/html/index.php"
+    else
+      echo "ERROR: /var/www/html/index.php not found"
+      exit 1
+    fi
     if [ -f "/var/www/html/occ" ]; then
       echo "Found /var/www/html/occ"
       OCC_COMMAND="/var/www/html/occ"
     else
-      echo "ERROR: /var/www/html/occ not found, trying index.php occ"
-      if [ -f "/var/www/html/index.php" ]; then
-        OCC_COMMAND="/var/www/html/index.php occ"
-      else
-        echo "ERROR: /var/www/html/index.php not found, cannot proceed with installation"
-        exit 1
-      fi
+      echo "WARN: /var/www/html/occ not found, using index.php occ"
+      OCC_COMMAND="/var/www/html/index.php occ"
     fi
+    # Debug: Check Apache configuration
+    echo "Checking Apache configuration..."
+    cat /etc/apache2/ports.conf
+    cat /etc/apache2/apache2.conf
     # Run Nextcloud setup if not installed
     if [ ! -f "{{ .Values.nextcloud.datadir }}/config.php" ]; then
       echo "Running Nextcloud installation..."
@@ -76,6 +77,7 @@ data:
     fi
     # Start Apache
     echo "Starting Apache on port 8080..."
+    apache2ctl -t && echo "Apache configuration test passed" || echo "Apache configuration test failed"
     exec apache2-foreground
   ports.conf: |
     Listen 8080
