--- a/charts/nextcloud/templates/configmap.yaml
+++ b/charts/nextcloud/templates/configmap.yaml
@@ -41,6 +41,9 @@ data:
     # Debug: Check Nextcloud files
     echo "Checking Nextcloud files in /var/www/html..."
     ls -l /var/www/html || echo "ERROR: Cannot list /var/www/html"
+    echo "Checking for Nextcloud files in image..."
+    find / -name index.php 2>/dev/null || echo "ERROR: index.php not found in image"
+    find / -name occ 2>/dev/null || echo "ERROR: occ not found in image"
     if [ -f "/var/www/html/index.php" ]; then
       echo "Found /var/www/html/index.php"
     else
