--- a/charts/nextcloud/templates/secret.yaml
+++ b/charts/nextcloud/templates/secret.yaml
@@ -5,3 +5,6 @@ metadata:
 type: Opaque
 data:
   auth-token: {{ .Values.exporter.auth.token | b64enc | quote }}
+  {{- if .Values.exporter.auth.username }}
+  auth-password: {{ .Values.exporter.auth.password | b64enc | quote }}
+  {{- end }}
