--- a/charts/minio/templates/deployment.yaml
+++ b/charts/minio/templates/deployment.yaml
@@ -43,11 +43,11 @@ spec:
             - containerPort: {{ .Values.exporter.port }}
               name: exporter
           env:
-            - name: MINIO_SERVER_URL
+            - name: MINIO_EXPORTER_URL
               value: "http://localhost:{{ .Values.minio.port }}"
-            - name: MINIO_ACCESS_KEY
+            - name: MINIO_EXPORTER_ACCESS_KEY
               value: {{ .Values.minio.accessKey }}
-            - name: MINIO_SECRET_KEY
+            - name: MINIO_EXPORTER_SECRET_KEY
               value: {{ .Values.minio.secretKey }}
       {{- end }}
       volumes:
