--- a/charts/postgres/Chart.yaml
+++ b/charts/postgres/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: postgres
-description: Helm chart for PostgreSQL with pgAdmin and Prometheus metrics
+description: Helm chart for PostgreSQL with Prometheus metrics exporter
 type: application
 version: 0.1.0
-appVersion: "1.0"
+appVersion: "16"
