--- a/charts/postgres/templates/pvc.yaml
+++ b/charts/postgres/templates/pvc.yaml
@@ -2,14 +2,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Release.Name }}-postgres-pvc
-  namespace: {{ .Release.Namespace }}
+  name: postgres
 spec:
+  storageClassName: {{ .Values.persistence.storageClass }}
   accessModes: {{ .Values.persistence.accessModes | toYaml | nindent 4 }}
   resources:
     requests:
       storage: {{ .Values.persistence.size }}
-  {{- if .Values.persistence.storageClass }}
-  storageClassName: {{ .Values.persistence.storageClass }}
-  {{- end }}
 {{- end }}
