--- a/charts/postgres/templates/secret.yaml
+++ b/charts/postgres/templates/secret.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Release.Name }}-secrets
+  name: postgres
 type: Opaque
 data:
   postgres-password: {{ .Values.postgres.password | b64enc }}
-  pgadmin-password: {{ .Values.pgadmin.password | b64enc }}
