--- a/charts/redis/templates/pvc.yaml
+++ b/charts/redis/templates/pvc.yaml
@@ -1,10 +1,12 @@
+{{- if .Values.persistence.enabled }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Release.Name }}-redis-pvc
+  name: redis
 spec:
   storageClassName: {{ .Values.persistence.storageClass }}
-  accessModes: {{ .Values.persistence.accessModes }}
+  accessModes: {{ .Values.persistence.accessModes | toYaml | nindent 4 }}
   resources:
     requests:
       storage: {{ .Values.persistence.size }}
+{{- end }}
