--- a/charts/redis/templates/service.yaml
+++ b/charts/redis/templates/service.yaml
@@ -1,19 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-redis
+  name: redis
 spec:
   type: NodePort
   ports:
-  - name: redis
-    port: {{ .Values.redis.port }}
-    targetPort: {{ .Values.redis.port }}
-    nodePort: {{ .Values.redis.nodePort }}
+    - name: redis
+      port: {{ .Values.redis.port }}
+      targetPort: {{ .Values.redis.port }}
+      nodePort: {{ .Values.redis.nodePort }}
   {{- if .Values.exporter.enabled }}
-  - name: exporter
-    port: {{ .Values.exporter.port }}
-    targetPort: {{ .Values.exporter.port }}
-    nodePort: {{ .Values.exporter.nodePort }}
+    - name: exporter
+      port: {{ .Values.exporter.port }}
+      targetPort: {{ .Values.exporter.port }}
+      nodePort: {{ .Values.exporter.nodePort }}
   {{- end }}
   selector:
-    app: {{ .Release.Name }}-redis
+    app: redis
