--- a/charts/mysql/templates/service.yaml
+++ b/charts/mysql/templates/service.yaml
@@ -1,13 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-mysql
+  name: mysql
 spec:
   type: NodePort
   ports:
-  - name: mysql
-    port: {{ .Values.mysql.port }}
-    targetPort: {{ .Values.mysql.port }}
-    nodePort: {{ .Values.mysql.nodePort }}
+    - name: mysql
+      port: {{ .Values.mysql.port }}
+      targetPort: {{ .Values.mysql.port }}
+      nodePort: {{ .Values.mysql.nodePort }}
+  {{- if .Values.exporter.enabled }}
+    - name: exporter
+      port: {{ .Values.exporter.port }}
+      targetPort: {{ .Values.exporter.port }}
+      nodePort: {{ .Values.exporter.nodePort }}
+  {{- end }}
   selector:
-    app: {{ .Release.Name }}-mysql
+    app: mysql
