--- a/charts/mysql/values.yaml
+++ b/charts/mysql/values.yaml
@@ -4,9 +4,34 @@ mysql:
   nodePort: 30009
   rootPassword: mysql-secret
   database: mydb
+
+exporter:
+  enabled: true
+  image: prom/mysqld-exporter:latest
+  port: 9104
+  nodePort: 30010
+
 persistence:
   enabled: true
   storageClass: local-storage
   accessModes:
     - ReadWriteOnce
   size: 8Gi
+  localPath: /mnt/disks/mysql
+  nodeAffinityHostname: k8s-main
+
+resources:
+  mysql:
+    limits:
+      cpu: "1"
+      memory: "1Gi"
+    requests:
+      cpu: "500m"
+      memory: "512Mi"
+  exporter:
+    limits:
+      cpu: "200m"
+      memory: "256Mi"
+    requests:
+      cpu: "100m"
+      memory: "128Mi"
