--- a/charts/mysql/values.yaml
+++ b/charts/mysql/values.yaml
@@ -9,10 +9,10 @@ exporter:
   enabled: true
   image: prom/mysqld-exporter:latest
   port: 9104
-  nodePort: 30002
+  nodePort: 30010
 
 persistence:
-  enabled: true
+  enabled: false
   storageClass: local-storage
   accessModes:
     - ReadWriteOnce
