--- a/charts/mysql/templates/deployment.yaml
+++ b/charts/mysql/templates/deployment.yaml
@@ -12,6 +12,15 @@ spec:
       labels:
         app: mysql
     spec:
+      initContainers:
+      {{- if .Values.persistence.enabled }}
+        - name: init-storage
+          image: busybox:latest
+          command: ["sh", "-c", "chown -R 999:999 /var/lib/mysql && chmod -R 777 /var/lib/mysql"]
+          volumeMounts:
+            - name: mysql-data
+              mountPath: /var/lib/mysql
+      {{- end }}
       containers:
         - name: mysql
           image: {{ .Values.mysql.image }}
@@ -42,11 +51,19 @@ spec:
                 - ping
             initialDelaySeconds: 15
             periodSeconds: 10
+            timeoutSeconds: 5
           readinessProbe:
-            tcpSocket:
-              port: {{ .Values.mysql.port }}
+            exec:
+              command:
+                - mysql
+                - -u
+                - root
+                - -p$(MYSQL_ROOT_PASSWORD)
+                - -e
+                - "SELECT 1"
             initialDelaySeconds: 5
             periodSeconds: 5
+            timeoutSeconds: 3
           resources: {{ .Values.resources.mysql | toYaml | nindent 12 }}
       {{- if .Values.exporter.enabled }}
         - name: mysql-exporter
@@ -56,15 +73,28 @@ spec:
               name: exporter
           env:
             - name: DATA_SOURCE_NAME
-              value: "root:{{ .Values.mysql.rootPassword }}@localhost:{{ .Values.mysql.port }}/{{ .Values.mysql.database }}"
+              value: "root:$(MYSQL_ROOT_PASSWORD)@tcp(localhost:{{ .Values.mysql.port }})/{{ .Values.mysql.database }}"
             - name: MYSQLD_EXPORTER_LOG_LEVEL
               value: debug
+            - name: MYSQL_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql
+                  key: mysql-root-password
+          livenessProbe:
+            httpGet:
+              path: /metrics
+              port: {{ .Values.exporter.port }}
+            initialDelaySeconds: 15
+            periodSeconds: 10
+            timeoutSeconds: 5
           readinessProbe:
             httpGet:
               path: /metrics
               port: {{ .Values.exporter.port }}
             initialDelaySeconds: 5
             periodSeconds: 10
+            timeoutSeconds: 3
           resources: {{ .Values.resources.exporter | toYaml | nindent 12 }}
       {{- end }}
       volumes:
